updated examples in reflection, added some examples to README, created README.textile